# KClient

./: CMakeLists.txt  README.md  ZmqClient.cpp  ZmqClient.h  ZmqServer.cpp  ZmqServer.h  kafka_script.txt  kclient.cpp  kclient.h  main.cpp  test.cpp  util.cpp  util.h  zmq_util.cpp
test/: f.txt
